@@ -1929,8 +1929,8 @@ data:extend({
       PM.ingredient("pm-cobalt-blue", 5),
       PM.ingredient("speed-module", 1),
       PM.ingredient("pm-module-speed-light", 1),
-      PM.ingredient("pm-fluid-circuit", 7),
-      PM.ingredient("processing-unit", 7)
+      PM.ingredient("pm-fluid-circuit", 8),
+      PM.ingredient("processing-unit", 8)
     },
     results =
     {
@@ -1949,8 +1949,8 @@ data:extend({
       PM.ingredient("pm-chrome-green", 5),
       PM.ingredient("efficiency-module", 1),
       PM.ingredient("pm-module-efficiency-light", 1),
-      PM.ingredient("pm-fluid-circuit", 7),
-      PM.ingredient("processing-unit", 7)
+      PM.ingredient("pm-fluid-circuit", 8),
+      PM.ingredient("processing-unit", 8)
     },
     results =
     {
@@ -1969,8 +1969,8 @@ data:extend({
       PM.ingredient("pm-cadnium-red", 5),
       PM.ingredient("productivity-module", 1),
       PM.ingredient("pm-module-productivity-light", 1),
-      PM.ingredient("pm-fluid-circuit", 7),
-      PM.ingredient("processing-unit", 7)
+      PM.ingredient("pm-fluid-circuit", 8),
+      PM.ingredient("processing-unit", 8)
     },
     results =
     {
@@ -4150,6 +4150,66 @@ data:extend({
       PM.product("pm-aqua-regia", 10, "fluid"),
       PM.product("water", 7.5, "fluid"),
       PM.product_range("pm-nitrosyl-chloride", 3, 5, "fluid")
+    }
+  },
+    {
+    type = "recipe",
+    name = "pm-speed-module-5",
+    enabled = false,
+    energy_required = 30,
+    subgroup = "pm-speed",
+    order = "e",
+    ingredients =
+    {
+      PM.ingredient("pm-cobalt-blue", 5),
+      PM.ingredient("speed-module-2", 1),
+      PM.ingredient("pm-module-speed-light", 1),
+      PM.ingredient("advanced-circuit", 9),
+      PM.ingredient("processing-unit", 9)
+    },
+    results =
+    {
+      PM.product("pm-speed-module-5", 1)
+    }
+  },
+  {
+    type = "recipe",
+    name = "pm-efficiency-module-5",
+    enabled = false,
+    energy_required = 30,
+    subgroup = "pm-efficiency",
+    order = "e",
+    ingredients =
+    {
+      PM.ingredient("pm-chrome-green", 5),
+      PM.ingredient("efficiency-module-2", 1),
+      PM.ingredient("pm-module-efficiency-light", 1),
+      PM.ingredient("advanced-circuit", 9),
+      PM.ingredient("processing-unit", 9)
+    },
+    results =
+    {
+      PM.product("pm-efficiency-module-5", 1)
+    }
+  },
+  {
+    type = "recipe",
+    name = "pm-productivity-module-5",
+    enabled = false,
+    energy_required = 30,
+    subgroup = "pm-productivity",
+    order = "e",
+    ingredients =
+    {
+      PM.ingredient("pm-cadnium-red", 5),
+      PM.ingredient("productivity-module-2", 1),
+      PM.ingredient("pm-module-productivity-light", 1),
+      PM.ingredient("advanced-circuit", 9),
+      PM.ingredient("processing-unit", 9)
+    },
+    results =
+    {
+      PM.product("pm-productivity-module-5", 1)
     }
   },
 } --[[@as data.RecipePrototype[] ]])
