@@ -434,69 +434,69 @@ data.raw["recipe"]["speed-module"].ingredients =
 {
   PM.ingredient("pm-module-case", 1),
   PM.ingredient("pm-module-speed-light", 1),
-  PM.ingredient("electronic-circuit", 4),
+  PM.ingredient("electronic-circuit", 5),
   PM.ingredient("pm-cobalt-blue", 5)
 }
 data.raw["recipe"]["productivity-module"].ingredients =
 {
   PM.ingredient("pm-module-case", 1),
   PM.ingredient("pm-module-productivity-light", 1),
-  PM.ingredient("electronic-circuit", 4),
+  PM.ingredient("electronic-circuit", 5),
   PM.ingredient("pm-cadnium-red", 5)
 }
 data.raw["recipe"]["efficiency-module"].ingredients =
 {
   PM.ingredient("pm-module-case", 1),
   PM.ingredient("pm-module-efficiency-light", 1),
-  PM.ingredient("electronic-circuit", 4),
+  PM.ingredient("electronic-circuit", 5),
   PM.ingredient("pm-chrome-green", 5)
 }
 data.raw["recipe"]["speed-module-2"].ingredients =
 {
   PM.ingredient("pm-module-case", 1),
   PM.ingredient("pm-module-speed-light", 1),
-  PM.ingredient("electronic-circuit", 5),
-  PM.ingredient("pm-fluid-circuit", 5),
+  PM.ingredient("electronic-circuit", 6),
+  PM.ingredient("pm-fluid-circuit", 6),
   PM.ingredient("pm-cobalt-blue", 5)
 }
 data.raw["recipe"]["productivity-module-2"].ingredients =
 {
   PM.ingredient("pm-module-case", 1),
   PM.ingredient("pm-module-productivity-light", 1),
-  PM.ingredient("electronic-circuit", 5),
-  PM.ingredient("pm-fluid-circuit", 5),
+  PM.ingredient("electronic-circuit", 6),
+  PM.ingredient("pm-fluid-circuit", 6),
   PM.ingredient("pm-cadnium-red", 5)
 }
 data.raw["recipe"]["efficiency-module-2"].ingredients =
 {
   PM.ingredient("pm-module-case", 1),
   PM.ingredient("pm-module-efficiency-light", 1),
-  PM.ingredient("electronic-circuit", 5),
-  PM.ingredient("pm-fluid-circuit", 5),
+  PM.ingredient("electronic-circuit", 6),
+  PM.ingredient("pm-fluid-circuit", 6),
   PM.ingredient("pm-chrome-green", 5)
 }
 data.raw["recipe"]["speed-module-3"].ingredients =
 {
   PM.ingredient("pm-module-case", 1),
   PM.ingredient("pm-module-speed-light", 1),
-  PM.ingredient("pm-fluid-circuit", 5),
-  PM.ingredient("advanced-circuit", 5),
+  PM.ingredient("pm-fluid-circuit", 7),
+  PM.ingredient("advanced-circuit", 7),
   PM.ingredient("pm-cobalt-blue", 5)
 }
 data.raw["recipe"]["productivity-module-3"].ingredients =
 {
   PM.ingredient("pm-module-case", 1),
   PM.ingredient("pm-module-productivity-light", 1),
-  PM.ingredient("pm-fluid-circuit", 6),
-  PM.ingredient("advanced-circuit", 6),
+  PM.ingredient("pm-fluid-circuit", 7),
+  PM.ingredient("advanced-circuit", 7),
   PM.ingredient("pm-cadnium-red", 5)
 }
 data.raw["recipe"]["efficiency-module-3"].ingredients =
 {
   PM.ingredient("pm-module-case", 1),
   PM.ingredient("pm-module-efficiency-light", 1),
-  PM.ingredient("pm-fluid-circuit", 5),
-  PM.ingredient("advanced-circuit", 6),
+  PM.ingredient("pm-fluid-circuit", 7),
+  PM.ingredient("advanced-circuit", 7),
   PM.ingredient("pm-chrome-green", 6)
 }
 data.raw["recipe"]["processing-unit"].ingredients =
