@@ -42,6 +42,7 @@ Date: 2025-12-07
 
   Fixes:
     - Fixed the tech icons of all battery equipment.
+    - Fixed module tiers not taking the right amount of circuits.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.514
